[package]
name = "rftp"
version = "1.0.0"
authors = [ "realatffour <ayhamaboualfadl@gmail.com>" ]

[dependencies]
clap = "2.33.0"
regex = "1.3.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
net2 = "0.2.33"
log = "0.4.8"
simple_logger = "1.4.0"
ifaces = "0.1.0"
dirs = "2.0.2"
